style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

@keyframes up-down {
    0% {transform: translateY(0);}
    50% {transform: translateY(-10px);}
    100% {transform: translateY(0);}  
}

@font-face {
    font-family: Ferrum;
    src: url(fonts/Ferrum-wy99.otf) format("opentype"); 
  }

:root {
    --background-color: #202022;
    --main-container-color: #3b3d42ec;
    --text-color: #ffffff;
    --colored-text-color: rgb(7, 182, 130);
    --colored-shadow: rgb(165, 31, 255);
    --standarised-shadow: drop-shadow(0px 0px 5px var(--colored-shadow)); 
}

input {
    all: initial;
    box-sizing: border-box;
    font-family: inherit;
  }

* {
    display: border-box;
    font-family: 'Roboto', sans-serif;
    text-decoration: none;
}

a {
    color: var(--text-color);
}

button {
    all: initial;
    font-family: inherit; 
    font-size: 100%;
    vertical-align: baseline;/* resetuje wyrównanie */
    border: none;
    color: var(--text-color);
    margin: 15px 0 15px 0;
    /*border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 0.895), rgba(0, 0, 255, 0)); */
    border-image-slice: 1;
}
button:hover, .nav-element:hover {
    color: var(--colored-text-color);
}

body {
    background-color: var(--background-color);
    color: var(--text-color);
}
main {
    display: flex;
    flex-direction: column;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 30px;

}




.container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 30px;
}

.container#blur.active {
    filter: blur(10px);
    pointer-events: none;
    user-select: none;
}

#popup-rps-game{
    position: fixed;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 600px;
    padding: 50px;
    background: white;
    color: black;
    opacity: 0;
    z-index: 1;
    visibility: hidden;
    transition: 0.5s;
}
#popup-rps-game.active{
    visibility: visible;
    opacity: 1;
    transition: 0.5s;
}

#popup-portfolio-warning{
    position: fixed;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 600px;
    padding: 50px;
    background: white;
    color: black;
    opacity: 0;
    z-index: 1;
    visibility: hidden;
    transition: 0.5s;
}
#popup-portfolio-warning.active{
    visibility: visible;
    opacity: 1;
    transition: 0.5s;
}








/*sekcja collapsible */

#div-SIMPLE-PROJECTS-collapsible, #div-ABOUT-THE-AUTHOR-collapsible{
    display: flex;
    justify-content: center;
    align-items: center;
    display: none; /* Ukrywamy domyślnie */
}

#div-SIMPLE-PROJECTS-collapsible.active, #div-ABOUT-THE-AUTHOR-collapsible.active {
    display: flex; /* Pokazujemy po kliknięciu */
    padding-bottom: 0px;
    justify-content: center;
    align-items: center;
    max-height: 50px;
}

#div-ABOUT-THE-AUTHOR-collapsible.active {
    justify-content: flex-start;
    border: 3px dashed var(--colored-text-color);
    overflow: hidden;
    max-height: none;
    height: 300px;
    animation: dash 2s infinite linear; /* Używamy animacji z kluczowymi klatkami */
}

#div-ABOUT-THE-AUTHOR-collapsible img {
    height: auto;
    max-height: 110%;
    border-radius: 5%;
}

#div-ABOUT-THE-AUTHOR-collapsible p {
    font-size: 18px;
}

#div-SIMPLE-PROJECTS-collapsible.active p {
    margin-bottom: 0;
}

#button-SIMPLE-PROJECTS-collapsible, #button-ABOUT-THE-AUTHOR-collapsible {
    border: none;
    background: none;
    cursor: pointer;
}

#button-ABOUT-THE-AUTHOR-collapsible {
    margin-left: auto;
    color: var(--text-color);
    padding: 10px 15px 10px 15px;
    margin: 15px 0 15px 0;
    border: 2px solid; border-color: rgba(1, 255, 255, 0.595)
}

header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}



.hiya-message-container p {
    margin: 0 20px 0 20px;
}

.hiya-message-container h1 {
    color: white;
    font-family: "Ferrum", Arial, Helvetica, sans-serif;
    font-size: 46px;
    margin: 0 auto 5px 0;
    filter: drop-shadow(0px 0px 5px rgb(7, 182, 130, 1) );
}

main {
    display: content-box;
    background-color: #655a663a;
    max-width: 100%;
    margin: 20px auto;
    padding: 0 20px;
    
    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.712));
}

.main-container {
    display: flex;
    /*justify-content: space-evenly;*/
}

.desc-text {
    font-size: 28px;
    min-width: 350px;
    animation: up-down 8s infinite; 
}

.ideas-container {
    padding: 50px 0 10px 0;
    margin: 0 0 0 0;

    width: 100%;
    text-align: center;
}

.ideas-container ol {
    border: 3px dashed #ff02ff5e;
}


footer {
    /*background: var(--main-container-color);
    background: url(graphics/mountains-big.jpg); */
    border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 0.895), rgba(0, 0, 255, 0)); 
        border-image-slice: 1;
    text-align: center;
    padding: 10px 0;
    margin: auto;
}

footer p {
    margin: 0;
}

#mascot-container {
    padding: 0 0 0 30px;
    margin: auto;
    height: 200px;

}

#mascot-container img {
    max-height: 150%;
    height: auto;
    filter: drop-shadow(0px 0px 5px #4e1b91); 
    transition: filter 0.5s ease-in-out;
    animation: up-down 8s infinite;
}

#mascot-container img:hover {
    filter: drop-shadow(0px 0px 5px var(--colored-shadow));
}

#cool-background {
    position: fixed;
    top: 0;
    right: 0;
    width: 100vw;
    height: 100vh;
    opacity: 0.25;
    background-image: url("graphics/mountains-big.jpg");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: -1;
}

@media all and (min-width: 801px) { /*big screens*/
    nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-grow: 1;
    
        text-align: right;
        width: 100%;
        margin: auto;
        color: var(--text-color);
        padding: 20px 0;
        border-bottom: 2px solid; border-image: linear-gradient(90deg, rgba(0, 0, 255, 0), rgba(1, 255, 255, 0.895), rgba(0, 0, 255, 0)); 
        border-image-slice: 1;
    }

    .hiya-message-container {
        display: flex;
        flex-grow: 1;
    
        align-items: center;
        text-align: left;
        margin: 0px 25px 0px 0px;
        font-family: Arial, Helvetica, sans-serif;
        color: var(--colored-text-color);
        
        /*filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.712));*/
    }

    .hiya-message-container p {
        margin: 0 20px 0 20px;
    }

    .nav-buttons-only {
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        justify-content: flex-end;
    
        text-align: right;
        margin-right: 2px;
    }
    .nav-element {
        color: var(--text-color);
        padding: 10px 15px 10px 15px;
        margin: auto 0 auto 0;
        border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 1), rgba(0, 234, 255, 0.455)); 
        border-image-slice: 1;
    }
    #cool-background {
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        opacity: 0.25;
        background-image: url("graphics/mountains-big.jpg");
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        z-index: -1;
    }
    
}

@media all and (max-width: 800px) { /*small screens*/
    #cool-background {
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        opacity: 0.25;
        background-image: url("graphics/mountains-big.jpg");
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        z-index: -1;
    }
    
    nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-direction: column;

    
        text-align: right;
        width: 100%;
        margin: auto;
        color: var(--text-color);
        padding: 20px 0;
        border-bottom: 2px solid; border-image: linear-gradient(90deg, rgba(0, 0, 255, 0), rgba(1, 255, 255, 0.895), rgba(0, 0, 255, 0)); 
        border-image-slice: 1;
    }

    .hiya-message-container {
        display: flex;
        flex-grow: 1;
    
        align-items: center;
        text-align: center;
        margin: 0px 0px 5px 0px;
        font-family: Arial, Helvetica, sans-serif;
        color: var(--colored-text-color);
        
        /*filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.712));*/
    }

    /*.hiya-message-container p {
        margin: 0 auto 0 auto;
    }*/
    
    .nav-buttons-only {
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        flex-direction: column;
    
        text-align: right;
        margin-right: 2px;
    }
    .nav-element {
        color: var(--text-color);
        padding: 10px 15px 10px 15px;
        margin: auto 0 auto 0;
        border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 1), rgba(0, 234, 255, 0.455)); 
        border-image-slice: 1;
    }
    
}

